# esp-capnp-test

./: CMakeLists.txt  README.md  sdkconfig
components/capnp/: CMakeLists.txt
components/capnp/c++/src/kj/: exception.c++  io.c++
main/: CMakeLists.txt  main.cpp  schema.capnp  schema.capnp.c++  schema.capnp.h
